#2258 Implement access to key members of an entity via metadata